--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9090
 spring.http.encoding.force=true
 spring.datasource.url=jdbc:mysql://localhost:3306/insurance
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #thymeleaf\u914d\u7f6e
