--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #service\u8bbe\u8ba1
 server.port=9090
 spring.http.encoding.force=true
+#\u8fdc\u7a0b
+#spring.datasource.url=jdbc:mysql://123.207.232.246:3306/insurance
+#spring.datasource.username=insurance
+#spring.datasource.password=insuranceI;;123456
+#\u672c\u5730
 spring.datasource.url=jdbc:mysql://localhost:3306/insurance
 spring.datasource.username=root
 spring.datasource.password=123456
